--- a/index.html
+++ b/index.html
@@ -1,56 +1,143 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>Archinow</title>
-    <meta charset="UTF-8">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        header {
-            padding: 100px 20px;
-            background-color: white;
-        }
-        h1 {
-            font-size: 60px;
-            margin: 0;
-        }
-        p {
-            font-size: 20px;
-            color: #555;
-        }
-        .btn {
-            display: inline-block;
-            margin: 20px;
-            padding: 15px 30px;
-            background-color: #111;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        section {
-            padding: 60px 20px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>ArchiNow</title>
+<style>
+    /* Reset et base */
+    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
+    body { background: #fdfaf6; color: #111; }
+    a { text-decoration:none; color: inherit; }
+    .container { width:90%; max-width:1200px; margin:auto; }
+
+    /* Navbar / Header */
+    header { padding:40px 0; text-align:center; background:white; box-shadow:0 2px 8px rgba(0,0,0,0.1);}
+    header h1 { font-size:3em; color:#111; margin-bottom:10px;}
+    header p { font-size:1.2em; color:#555; }
+
+    /* Boutons */
+    .btn { display:inline-block; padding:12px 25px; background:#111; color:white; border-radius:5px; margin:10px; cursor:pointer; transition:0.3s; }
+    .btn:hover { background:#444; }
+
+    /* Pages cachées par défaut */
+    .page { display:none; padding:60px 0; }
+    .active { display:block; }
+
+    /* Formulaire */
+    input, textarea { padding:10px; margin:10px 0; width:100%; max-width:500px; border:1px solid #ccc; border-radius:5px; }
+    label { display:block; margin-top:15px; font-weight:bold; }
+
+    /* Cartes experts */
+    .experts { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px; }
+    .expert-card { background:white; border-radius:10px; padding:20px; width:250px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:center; }
+    .expert-card h3 { margin-bottom:10px; color:#111; }
+    .expert-card p { color:#555; margin-bottom:15px; }
+</style>
 </head>
 <body>
 
-<header>
-    <h1>Archinow</h1>
-    <p>Connect with architecture experts. Finish your project faster.</p>
-    <a href="#" class="btn">Submit Your Project</a>
-    <a href="#" class="btn">Become an Expert</a>
-</header>
+<!-- ===== PAGE D'ACCUEIL ===== -->
+<div id="home" class="page active">
+    <div class="container">
+        <header>
+            <h1>ArchiNow</h1>
+            <p>Connectez les étudiants avec des experts en architecture pour compléter leur projet rapidement</p>
+        </header>
 
-<section>
-    <h2>How It Works</h2>
-    <p>1. Upload your project</p>
-    <p>2. Get matched with an expert</p>
-    <p>3. Receive your completed work</p>
-</section>
+        <div style="margin-top:50px; text-align:center;">
+            <label>Nom de l'étudiant :</label>
+            <input type="text" id="studentName" placeholder="Ex. Rida Zbair">
+
+            <label>Code étudiant :</label>
+            <input type="text" id="studentCode" placeholder="Ex. 12345">
+
+            <div class="btn" onclick="goToPage('experts')">Continuer</div>
+        </div>
+    </div>
+</div>
+
+<!-- ===== PAGE EXPERTS ===== -->
+<div id="experts" class="page">
+    <div class="container">
+        <header>
+            <h1>Experts ArchiNow</h1>
+            <p>Choisissez l'expert à qui envoyer votre projet</p>
+        </header>
+
+        <div class="experts">
+            <div class="expert-card">
+                <h3>Ahmen Rida</h3>
+                <p>Expert Design</p>
+                <div class="btn" onclick="selectExpert('Ahmen Rida')">Cliquez & Upload</div>
+            </div>
+            <div class="expert-card">
+                <h3>Salim Khalid</h3>
+                <p>Expert Plan & Coupes</p>
+                <div class="btn" onclick="selectExpert('Salim Khalid')">Cliquez & Upload</div>
+            </div>
+        </div>
+
+        <div style="text-align:center; margin-top:30px;">
+            <div class="btn" onclick="goToPage('home')">Retour à l'accueil</div>
+        </div>
+    </div>
+</div>
+
+<!-- ===== PAGE UPLOAD ===== -->
+<div id="upload" class="page">
+    <div class="container">
+        <header>
+            <h1 id="expertNameTitle">Envoyer une demande</h1>
+        </header>
+
+        <form id="uploadForm" onsubmit="submitRequest(event)" style="max-width:600px; margin:auto;">
+            <label>Décrivez votre demande :</label>
+            <textarea id="projectDesc" rows="5" placeholder="Écrivez les détails du projet..."></textarea>
+
+            <label>Importer le fichier du projet :</label>
+            <input type="file" id="projectFile">
+
+            <label>Numéro de contact :</label>
+            <input type="text" id="contactNumber" placeholder="Ex. +212612345678">
+
+            <div class="btn" type="submit">Envoyer la demande</div>
+        </form>
+
+        <div style="text-align:center; margin-top:30px;">
+            <div class="btn" onclick="goToPage('experts')">Retour aux experts</div>
+        </div>
+    </div>
+</div>
+
+<!-- ===== SCRIPT ===== -->
+<script>
+let selectedExpert = '';
+
+function goToPage(pageId) {
+    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+    document.getElementById(pageId).classList.add('active');
+}
+
+function selectExpert(name) {
+    selectedExpert = name;
+    document.getElementById('expertNameTitle').innerText = `Envoyer une demande à ${name}`;
+    goToPage('upload');
+}
+
+function submitRequest(e) {
+    e.preventDefault();
+    let student = document.getElementById('studentName').value;
+    let code = document.getElementById('studentCode').value;
+    let desc = document.getElementById('projectDesc').value;
+    let file = document.getElementById('projectFile').files[0]?.name || 'Aucun fichier';
+    let contact = document.getElementById('contactNumber').value;
+
+    // Simulation de l'envoi
+    alert(`Demande envoyée !\nÉtudiant : ${student}\nCode : ${code}\nExpert : ${selectedExpert}\nFichier : ${file}\nContact : ${contact}\nDescription : ${desc}`);
+
+    goToPage('experts');
+}
+</script>
 
 </body>
 </html>
